--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %} {% block content %}
-<div class="container py-5">
-	<h1>Публикации в категории - {{ slug }}</h1>
-</div>
+{% extends 'base.html' %}
+{% block title %}Публикации в категории{% endblock %}
+{% block content %}
+  <div class="container py-5">
+    <h1>Публикации в категории - {{ slug }}</h1>
+  </div>
 {% endblock %}
