--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,12 +1,14 @@
-{% extends 'base.html' %} {% block content %}
-<div class="container py-5">
-	<article>
-		<ul>
-			<li>Место: {{ post.location }}</li>
-			<li>Дата: {{ post.date }}</li>
-			<li>Категория: <a href="not-my-day">not-my-day</a></li>
-		</ul>
-		<p>{{ post.text|linebreaks }}</p>
-	</article>
-</div>
+{% extends 'base.html' %}
+{% block title%}{{ post.location }}{% endblock%}
+{% block content %}
+  <div class="container py-5">
+    <article>
+      <ul>
+        <li>Место: {{ post.location }}</li>
+        <li>Дата: {{ post.date }}</li>
+        <li>Категория: <a href="not-my-day">not-my-day</a></li>
+      </ul>
+      <p>{{ post.text|linebreaks }}</p>
+    </article>
+  </div>
 {% endblock content %}
