--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,21 +1,20 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
-<div class="container py-5">
-	<h1>Лента записей</h1>
-	<!-- Перебираем в цикле все посты -->
-	<hr />
-	{% for post in posts%}
-	<article>
-		<ul>
-			<li>Место: {{ post.location }}</li>
-			<li>Дата: {{ post.date }}</li>
-			<li>Категория: <a href="not-my-day">not-my-day</a></li>
-		</ul>
-		<!-- Первые 10 слов -->
-		<p>{{post.text|truncatewords:10 }}</p>
-		<a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
-	</article>
-	{% if not forloop.last%}
-	<hr />
-	{% endif %} {% endfor %}
-</div>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}Лента записей{% endblock %}
+{% block content %}
+  <div class="container py-5">
+    <h1>Лента записей</h1>
+    {% for post in posts %}
+      <hr>
+      <article>
+        <ul>
+          <li>Место: {{ post.location }}</li>
+          <li>Дата: {{ post.date }}</li>
+          <li>Категория: <a href="not-my-day">not-my-day</a></li>
+        </ul>
+        <p>{{ post.text|truncatewords:10 }}</p>
+        <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
+      </article>
+    {% endfor %}
+  </div>
 {% endblock %}
