--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -2,13 +2,15 @@
 {% block title%}{{ post.location }}{% endblock%}
 {% block content %}
   <div class="container py-5">
-    <article>
-      <ul>
-        <li>Место: {{ post.location }}</li>
-        <li>Дата: {{ post.date }}</li>
-        <li>Категория: <a href="not-my-day">not-my-day</a></li>
-      </ul>
-      <p>{{ post.text|linebreaks }}</p>
-    </article>
+    <div class="shadow-lg p-3 mb-5 bg-white rounded">
+      <article>
+        <ul>
+          <li>Место: {{ post.location }}</li>
+          <li>Дата: {{ post.date }}</li>
+          <li>Категория: <a href="not-my-day">not-my-day</a></li>
+        </ul>
+        <p>{{ post.text|linebreaks }}</p>
+      </article>
+    </div>
   </div>
 {% endblock content %}
